document execution ie11 alignment fixes

--- a/knowage/web-content/themes/commons/css/SASS/components/_documentBrowser.scss
+++ b/knowage/web-content/themes/commons/css/SASS/components/_documentBrowser.scss
@@ -62,6 +62,9 @@
 		md-icon {
 			color: $cardActionIconsColor;
 		}
+		.preview-icon {
+			height: 112px;
+		}
 	}
 	
 	.documentCard md-card-title {
