--- a/knowage/web-content/themes/commons/css/SASS/custom_style.scss
+++ b/knowage/web-content/themes/commons/css/SASS/custom_style.scss
@@ -616,3 +616,7 @@ md-menu-content._md-menu-bar-menu .divider {
 md-menu-content._md-menu-bar-menu.md-dense md-menu-item.md-indent>md-icon {
   line-height: 20px;
 }
+
+md-dialog.md-knowage-theme {
+  margin: auto;
+}
